--- a/Images+Booki/index.css
+++ b/Images+Booki/index.css
@@ -410,7 +410,7 @@ article.activites{
 }
 
 img.activite-1{
-  max-width: 302px;
+  /* max-width: 302px; */
   width: 100%;
   height: 389px;
   border-radius: 20px 20px 0px 0px;
