--- a/Images+Booki/CSS/index.css
+++ b/Images+Booki/CSS/index.css
@@ -3,46 +3,60 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
 
 *{
-  box-sizing: border-box;
+  box-sizing: border-box;  /* */
 
 } 
 
 html{
   scroll-behavior: smooth;
-  max-width: 1400px;
+  max-width: 1400px;  /* */
   width: 100%;
   margin: 0px auto; /* Pour centrer le site */ 
 
 }
 
 img{
-  object-fit: cover;
+  object-fit: cover;  /* */
 }
 
 i.fa-star{
   font-size: 13px;
-  color: #0065FC;
+  color: #0065FC;      /* */
   height: 12px;
   width: 12px;
 }
 
 body{
   font-family: 'Raleway', sans-serif; 
-  padding: 0px 5px;
+  padding: 0px 5px;  /* */
   display: flex;
   flex-direction: column;
-  margin: 0px;
+  margin: 0px;  /* */
 
 }
 
 a{
-  text-decoration: none;
-  color: black;
+  text-decoration: none;  /* */
+  color: black;    /* */
 }
 
-a.nav:hover{
-color: #0065FC;
-border-top: 2px solid #0065FC;
+button{
+  cursor: pointer;  /* */
+  }
+
+h3{
+    font-weight: 700;
+    font-size: 18px;
+  }
+
+/* HEADER */
+
+header{
+  display: flex; /* */
+  align-items: center; /* */
+  justify-content: space-between; /* */
+  margin-bottom: 63px;
+  width: 100%;
 }
 
 nav{
@@ -53,28 +67,24 @@ a.nav{
   width: 162px;
   padding-top: 45px;
   text-align: center;
-  border-top: 2px solid transparent;
+  border-top: 2px solid transparent;  /* */
   font-weight: 500;
   font-size: 16px;
 }
 
-button{
-cursor: pointer;
-}
+a.nav:hover{
+  color: #0065FC;
+  border-top: 2px solid #0065FC;  /* */
+  }
 
-header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 63px;
-  width: 100%;
-}
 
 .logo{
   width: 61.09px;
   height: 19px;
    margin-top: 45px;
 }
+
+/* RECHERCHE */
 
 section#recherche{
   width: 100%;
@@ -121,9 +131,9 @@ input.search{
 }
 
 .search::placeholder{  /* Pour écrire dans le form ça s'effacera quand on clique dessus pour écrire */
-  color: black;
+  color: black; /* */
   font-weight: 700;
-  opacity: 1; /* mettre en noir sur tous les serveurs*/
+  opacity: 1; /* mettre en noir sur tous les navigateurs (firefox)*/
 }
 
 div.bouton-search{
@@ -139,27 +149,26 @@ div.bouton-search{
 }
 
 #search-loupe{
-  display: none;
+  display: none; /* */
 }
 
-button:hover{
-  background-color: #deebff !important;
-}
 
 button.bouton-recherche{
   font-weight: 700;
   font-size: 18px;
-  background: transparent;
+  background: transparent !important;
   border: none;
   color: white;
 }
 
+/* FILTRES */
+
 section.filtre{
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-start; /* */
   column-gap: 30px;
-  flex-wrap: wrap;
-  row-gap: 20px;
+  flex-wrap: wrap; /* */
+  row-gap: 20px; /* */
   width: 100%;
   align-items: center;
   margin-top: 31px;
@@ -188,6 +197,10 @@ button.bouton{
   height: 50px;
   padding: 14px 20px;
   background-color: white;
+}
+
+button.bouton:hover{
+  background-color: #deebff !important;  /* */
 }
 
 div#information{
@@ -221,17 +234,25 @@ i.information{
 
 }
 
+/* HEBERGEMENTS */
+
 div#hebergement{
   width: 100%;     
   height: 626px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; /* */
   margin-top: 39px;
   column-gap: 10px;
 }
 
+h3.titre{
+  margin: 0px;
+  font-weight: 700;
+  font-size: 16px;
+}
+
 section.hebergement{
-  max-width: 880px;
+  max-width: 880px; /* */
   width: 100%;   
   height: 626px;
   background-color: #F2F2F2;
@@ -244,54 +265,13 @@ section.hebergement{
 section.hebergement h2{
   margin-top: 0px;
 }
-section.populaires h2{
-  margin-top: 0px;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-section.populaires{
-  width: 420px;  
-  height: 626px;
-  background-color: #F2F2F2;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;  
-  padding: 40px;
-}
-
-div .etoiles{
-  padding-top: 4px;
-}
-
-div.info-populaire{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.info-populaire .icon{
- font-size: 20px;
-}
 
 div#articles{
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; /* */
   justify-content: space-between;
   gap: 10px;
   row-gap: 30px;
-}
-
-div#populaire{
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
- a#plus{
-  line-height: 100px;
-  font-weight: 700;
-  font-size: 18px;
 }
 
 div.text-hebergement{
@@ -302,7 +282,7 @@ div.text-hebergement{
 
 article.articles-marseille{
   max-width: 246px;
-  width: 32%;
+  width: 32%; /* */
   min-height: 199px;
   background-color: white;
   border-radius: 20px;
@@ -319,10 +299,50 @@ article.articles-marseille{
 img.logement-1{
   width: 100%;
   height: 124px;
-  border: 5px solid #FFFFFF;
+  border: 5px solid #FFFFFF; /* */
   border-radius: 20px 20px 0px 0px;
 }
 
+a#plus{
+  line-height: 100px;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+/* POPULAIRES */
+
+div#populaire{
+  display: flex;
+  flex-direction: column; /* */
+  gap: 30px;
+}
+
+section.populaires h2{
+  margin-top: 0px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+div.info-populaire{
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
+}
+
+.info-populaire .icon{
+  font-size: 20px;
+ }
+
+section.populaires{
+  width: 420px;  
+  height: 626px;
+  background-color: #F2F2F2;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;  
+  padding: 40px;
+}
 
 article.articles-populaires{
   max-width: 343px;
@@ -337,10 +357,11 @@ a.populaire{
   display: flex;
 }
 
+
 div.text-populaire{
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: column; /**/
+  justify-content: space-between; /**/
   margin: 0px;
   padding-left: 3.3px;
   padding-bottom: 12px;
@@ -353,8 +374,6 @@ div.details-populaire{
   padding-top: 7.7px;
 }
 
-
-
 p.prix{
   margin: 0px;
   font-weight: 600;
@@ -362,12 +381,9 @@ p.prix{
 
 }
 
-h3.titre{
-  margin: 0px;
-  font-weight: 700;
-  font-size: 16px;
+div .etoiles{
+  padding-top: 4px;
 }
-
 
 
 img.logement-2{
@@ -379,10 +395,12 @@ img.logement-2{
 }
 
 i.cinq{
-  color: #F2F2F2;
+  color: #F2F2F2; /**/
   width: 12px;
   height: 12px;
 }
+
+/* ACTIVITES */
 
 section#activites-marseille{
   width: 100%;
@@ -394,8 +412,8 @@ section#activites-marseille{
 
 div.activites-marseille{
   display: flex;
-  gap: 10px;
-  justify-content: space-between;
+  gap: 10px;  /**/
+  justify-content: space-between;  /**/
   margin: 0px;
   padding-top: 24px;
 }
@@ -406,6 +424,21 @@ article.activites{
   height: 445px;
   border-radius: 20px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+}
+
+.details-activites h3{
+  font-size: 16px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  margin-top: 4px;
+}
+
+div.info{
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 
 }
 
@@ -429,33 +462,13 @@ div.details-activites{
 
 footer{
 display: flex;
-justify-content: flex-start;
+justify-content: flex-start; /**/
 background-color: #F2F2F2;
 width: 100%;
 height: 225px;
 margin-top: 69px;
-gap: 230px;
-padding-left: 70px;
-
-}
-
-h3{
-  font-weight: 700;
-  font-size: 18px;
-}
-
-.details-activites h3{
-  font-size: 16px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  margin-top: 4px;
-}
-
-div.info{
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
+gap: 230px; /**/
+padding-left: 70px; /**/
 
 }
 
@@ -472,7 +485,7 @@ a.liens:hover{
 
 /* Tablette */
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 992px){ /**/
  
 body{
   width: 100%;
@@ -505,7 +518,7 @@ div#information{
 }
 
 div#hebergement{
-flex-wrap: wrap;
+  flex-direction: column; /**/
   row-gap: 50px;
   padding: 0px;
   margin: 0px;
@@ -519,7 +532,10 @@ section.hebergement{
   max-width: none;
 }
 
-div#articles{
+div#article{
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; 
   gap: 10px;
   justify-content: space-between;
 }
@@ -570,12 +586,6 @@ section.populaires{
   
 }
 
-div#article{
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
 div#populaire{
   display: flex;
   align-items: center;
@@ -624,7 +634,7 @@ section#activites-marseille{
 footer{
   width: 100%;
   height: auto;
-  gap: 80px;
+  gap: 80px; /**/
 }
 
 }
@@ -656,7 +666,7 @@ footer{
 
     a.nav:hover{
       color: #0065FC;
-      border-bottom: 2px solid #0065FC;
+      border-bottom: 2px solid #0065FC; /**/
       border-top: none;
       }
 
@@ -719,7 +729,7 @@ footer{
       display: none;
     }
 
-    #search-loupe{
+    #search-loupe{ /**/
       display: flex;
       width: 17px;
       height: 17px;
@@ -727,12 +737,12 @@ footer{
     }
 
     section#recherche{
-      height: auto;
+      height: auto; /**/
     }
 
     section.filtre{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; /**/
     padding: 0px 20px;
     padding: 20px;
     margin-top: 14px;
@@ -740,7 +750,7 @@ footer{
     }
 
     h2#filtre{
-      width: 100%;
+      width: 100%; /**/
     }
 
     div#information{
@@ -758,27 +768,27 @@ footer{
     }
 
     div#hebergement{
-      flex-direction: column-reverse;
+      flex-direction: column-reverse; /**/
       width: 100%;
       height: auto;
       gap: 0px;
     }
 
         section.hebergement{
-          height: auto;
+          height: auto; /**/
           padding: 20px 20px 12px 20px;
           border-radius: 0px;
           background-color: white;
         }
 
         div#articles{
-          flex-direction: column;
+          flex-direction: column; /**/
           width: 100%;
         }
 
             article.articles-marseille{
             max-width: none;
-            width: 100%;
+            width: 100%; /**/
             height: 199px;
             }
 
@@ -795,7 +805,7 @@ footer{
     }
 
       div#populaire{
-      flex-direction: column;
+      flex-direction: column; ,/**/
       }
 
         article.articles-populaires{
@@ -809,7 +819,7 @@ footer{
             }
 
     a#plus{
-      display: none;
+      display: none; /**/
     }        
 
     section#activites-marseille{
@@ -817,7 +827,7 @@ footer{
     }
 
       div.activites-marseille{
-        flex-wrap: wrap;
+        flex-wrap: wrap; /**/
         width: 100%;
         height: auto;
         row-gap: 24px;
@@ -836,11 +846,11 @@ footer{
         }
     
     footer{
-      flex-direction: column;
+      flex-direction: column; /**/
       height: auto;
       gap: 5px;
-      padding-bottom: 50px;
-      padding-left: 30px;
+      padding-bottom: 50px; /**/
+      padding-left: 30px; /**/
     }
 
     footer div{
