Restructuration post soutenance blanche 27/12/2022

--- a/Images+Booki/CSS/index.css
+++ b/Images+Booki/CSS/index.css
@@ -805,7 +805,7 @@ footer{
     }
 
       div#populaire{
-      flex-direction: column; ,/**/
+      flex-direction: column; /**/
       }
 
         article.articles-populaires{
